fixed overflow on cart

--- a/public/styles/cart.css
+++ b/public/styles/cart.css
@@ -63,7 +63,7 @@
   display: flex;
   flex-direction: column;
   height: 60%;
-  justify-content: center;
+  justify-content: flex-start;
   margin: 0;
   overflow: scroll;
   width: 90%;
@@ -84,6 +84,7 @@
   background: orange;
   display: flex;
   height: 50px;
+  min-height: 50px;
   justify-content: center;
   width: 100%;
 }
